Project

General

Profile

Actions

Bug #10126

closed

smatch fix for kmfcfg

Added by John Levon almost 5 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2018-12-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

smatch is being a bit picky here, but let's assuage it.

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 19e768cea9f86f85e2ac5e7346c007a7f201e154

commit  19e768cea9f86f85e2ac5e7346c007a7f201e154
Author: John Levon <john.levon@joyent.com>
Date:   2019-01-30T22:57:11.000Z

    10126 smatch fix for kmfcfg
    Reviewed by: Peter Tribble <peter.tribble@gmail.com>
    Reviewed by: Andy Stormont <astormont@racktopsystems.com>
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF